--- a/layout.html
+++ b/layout.html
@@ -5,50 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Acción</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .sidebar {
-            background-color: #343a40;
-            color: white;
-        }
-        .sidebar a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            display: block;
-        }
-        .sidebar a:hover {
-            background-color: #495057;
-        }
-        @media (max-width: 767.98px) {
-            .sidebar {
-                position: static;
-                height: auto;
-                width: 100%;
-            }
-            .sidebar h2 {
-                display: none;
-            }
-            .sidebar a {
-                display: block;
-                margin: 0;
-                text-align: left;
-            }
-            .content {
-                margin-left: 0 !important;
-                margin-top: 20px;
-            }
-        }
-        @media (min-width: 768px) {
-            .content {
-                margin-left: 250px;
-            }
-            .sidebar {
-                height: 100vh;
-                position: fixed;
-                width: 250px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace al archivo CSS externo -->
 </head>
 <body>
     <div class="container-fluid">
@@ -104,21 +61,23 @@
                         <label for="accionesPlanificadas" class="form-label">Acciones Planificadas</label>
                         <textarea class="form-control" id="accionesPlanificadas" rows="3"></textarea>
                     </div>
-                    <div class="mb-3">
-                        <label for="evaluacionEficacia" class="form-label">Evaluación de la Eficacia de las Acciones</label>
-                        <textarea class="form-control" id="evaluacionEficacia" rows="3"></textarea>
+                    <div class="row mb-3">
+                        <div class="col-md-8">
+                            <label for="evaluacionEficacia" class="form-label">Evaluación de la Eficacia de las Acciones</label>
+                            <textarea class="form-control" id="evaluacionEficacia" rows="3"></textarea>
+                        </div>
+                        <div class="col-md-4 d-flex flex-column justify-content-end">
+                            <div class="mb-3">
+                                <label for="fechaCierre" class="form-label">Fecha de Cierre</label>
+                                <input type="date" class="form-control" id="fechaCierre">
+                            </div>
+                            <button type="submit" class="btn btn-primary align-self-end">Registrar Acción</button>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="fechaCierre" class="form-label">Fecha de Cierre</label>
-                        <input type="date" class="form-control" id="fechaCierre">
-                    </div>
-                    <button type="submit" class="btn btn-primary">Registrar Acción</button>
                 </form>
             </main>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
